Add auto spec generation for swagger endpoint
